test/typecheck/errors/assignoutput.boa
o: output sum[int][int] of int;

o[3][3] = 3;
